[gd_scene load_steps=7 format=4 uid="uid://c342nmofgh7c5"]

[ext_resource type="Script" uid="uid://do1oqqohubcc8" path="res://Player.gd" id="1_4flbx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sh265"]
size = Vector3(1.1, 0.175, 1.15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_53dw8"]

[sub_resource type="ArrayMesh" id="ArrayMesh_nxcai"]
_surfaces = [{
"aabb": AABB(-0.578756, 0.0979029, -0.578756, 1.15751, 0.126717, 1.15751),
"format": 34359742465,
"index_count": 396,
"index_data": PackedByteArray("AAABAAIAAQADAAIAAAAEAAEAAQAFAAMABAAGAAEABgAFAAEABgAHAAUABQAIAAMABQAHAAgAAgADAAgACQAIAAcAAgAIAAkACQAHAAYABAAKAAYACgAJAAYAAAAKAAQACgALAAkAAAALAAoACQAMAAIAAgANAAAAAgAMAA0AAAAOAAsAAAANAA4ACwAPAAkACQAPAAwACwAOAA8ADwANAAwADwAOAA0ADAAQAA0ADwARAAwADAARABAADgASAA8ADQATAA4ADgATABIAFAATAA0AFAANABAAFQARAA8AFQAPABIAFgAUABAAFwAQABEAFwAWABAAGAARABAAGAAQABQAGQAXABEAGQARABgAGQAaABcAEQAVABsAEQAbABgAFwAaABwAHAAaAB0AGQAdABoAFwAcAB4AFgAXAB4AHAAdAB8AHgAcAB8AIAAfAB0AHgAfACAAIAAdABkAFgAeACEAIQAeACAAIQAgACIAFgAhACIAIgAgABkAFgAiACMAIgAZACMAIwAZABgAFgAjABQAIwAYABQAGAAkABQAGAAbACQAJQAUACQAGwAkACUAEwAUACUAJgAkABsAJwAkACYAJwAlACQAJgAbACgAJwAmACkAKQAmACgAJwApACoAKgApACsAKQAoACsAJwAqACwAKgArACwAJwAsAC0ALQAlACcAKwAuACwALAAuAC8ALAAvAC0AKwAwAC4AKAAwACsALgAxAC8ALgAwADEALQAvADEAKAAxADAALQAxACgAKAAyAC0ALQAyACUAKAAbADIAGwAlADIAGwAVADIAMwAlADIAMwAyABUAEwAlADMANAAzABUANQATADMANAA1ADMAEgAzABMAEgAVADMANgASABMANQA2ABMANwAVABIANgA3ABIANwA0ABUANQA4ADYAOAA3ADYANQA5ADgANwA6ADQANQA7ADkANQA0ADsAOQA8ADgAOAA8ADcAOQA7ADwANAA6AD0ANAA9ADsANwA+ADoAPAA+ADcAPQA6AD4AOwA/ADwAOwA9AD8APAA/AD4APQA+AD8A"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 64,
"vertex_data": PackedByteArray("zbrPPkuByD3DBvy+xQb8PiBxHT5eKRS/zbrPPiBxHT7DBvy+zbrPPtACZj7DBvy+xQb8PkuByD1eKRS/xQb8PtACZj5eKRS/YSkUPyBxHT7DBvy+YSkUP9ACZj7DBvy+xQb8PtACZj7Jus++xQb8PiBxHT7Jus++YSkUP0uByD3DBvy+xQb8PkuByD3Jus++srW9PSBxHT7Mcje+srW9PUuByD3Mcje+znI3PkuByD2qtb29znI3PiBxHT6qtb29trW9vUuByD3Mcje+trW9vSBxHT7Mcje+znI3PiBxHT69tb09znI3PkuByD29tb090HI3vkuByD2qtb29srW9PSBxHT7Scjc+zbrPvkuByD3DBvy+zbrPviBxHT7DBvy+0HI3viBxHT6qtb29xQb8viBxHT7Jus++zbrPvtACZj7DBvy+0HI3viBxHT69tb09xQb8vtACZj5eKRS/xQb8vtACZj7Jus++xQb8viBxHT5eKRS/YSkUv9ACZj7DBvy+YSkUvyBxHT7DBvy+xQb8vkuByD1eKRS/YSkUv0uByD3DBvy+xQb8vkuByD3Jus++0HI3vkuByD29tb09trW9vUuByD3Scjc+xQb8vkuByD3Ous8+zbrPvkuByD3LBvw+xQb8viBxHT7Ous8+YSkUv0uByD3LBvw+xQb8vkuByD1iKRQ/YSkUvyBxHT7LBvw+xQb8viBxHT5iKRQ/zbrPviBxHT7LBvw+xQb8vtACZj5iKRQ/zbrPvtACZj7LBvw+YSkUv9ACZj7LBvw+xQb8vtACZj7Ous8+trW9vSBxHT7Scjc+srW9PUuByD3Scjc+zbrPPiBxHT7LBvw+zbrPPkuByD3LBvw+xQb8PkuByD3Ous8+xQb8PiBxHT7Ous8+YSkUP0uByD3LBvw+xQb8PkuByD1iKRQ/zbrPPtACZj7LBvw+xQb8PiBxHT5iKRQ/YSkUPyBxHT7LBvw+xQb8PtACZj5iKRQ/xQb8PtACZj7Ous8+YSkUP9ACZj7LBvw+")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_xhfnw"]
resource_name = "drnn4_Cube_001"
_surfaces = [{
"aabb": AABB(-0.578756, 0.0979029, -0.578756, 1.15751, 0.126717, 1.15751),
"attribute_data": PackedByteArray("AADAPgAAQD8AACA/AAAAPwAAID8AAEA/AADAPgAAAD8AAMA+AABAPwAAID8AAEA/AAAgPwAAQD8AACA/AAAAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AAAgPwAAAD8AACA/AACAPgAAwD4AAIA+AAAgPwAAAAAAACA/AACAPgAAID8AAIA+AAAgPwAAAAAAAMA+AAAAAAAAID8AAAAAAADAPgAAAAAAAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAAD4AAIA+AAAAPgAAAD8AAGA/AACAPgAAYD8AAAA/AABgPwAAAD8AAGA/AACAPgAAID8AAAAAAAAAPgAAAD8AACA/AABAPwAAwD4AAAAAAABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AABgPwAAgD4AAMA+AABAPwAAID8AAAA/AADAPgAAAD8AACA/AABAPwAAID8AAAA/AAAgPwAAQD8AAMA+AABAPwAAID8AAEA/AADAPgAAAD8AACA/AACAPgAAwD4AAIA+AAAgPwAAAD8AACA/AACAPgAAID8AAAA/AADAPgAAgD4AACA/AAAAAAAAwD4AAAAAAAAgPwAAgD4AACA/AAAAAAAAwD4AAAAAAAAgPwAAAAAAACA/AACAPgAAAD4AAAA/AADAPgAAgD4AAAA+AACAPgAAwD4AAAA/AAAAPgAAgD4AAAA+AAAAPwAAID8AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAAA/AADAPgAAAD8AAMA+AACAPgAAID8AAAAAAAAAPgAAAD8AAMA+AAAAAAAAID8AAEA/AABgPwAAgD4AAGA/AAAAPwAAYD8AAIA+AABgPwAAAD8AAMA+AABAPwAAID8AAAA/AADAPgAAAD8AACA/AABAPwAAID8AAAA/AAAgPwAAQD8AAMA+AABAPwAAID8AAEA/AADAPgAAgD4AACA/AAAAAAAAwD4AAAAAAAAgPwAAgD4AACA/AAAAAAAAwD4AAAAAAAAgPwAAAAAAACA/AACAPgAAAD4AAAA/AADAPgAAgD4AAAA+AACAPgAAwD4AAAA/AAAAPgAAgD4AAAA+AAAAPwAAID8AAAAAAAAAPgAAAD8AAMA+AAAAAAAAID8AAEA/AABgPwAAgD4AAGA/AAAAPwAAYD8AAIA+AABgPwAAAD8AAMA+AABAPwAAID8AAAA/AAAgPwAAQD8AAMA+AAAAPwAAwD4AAEA/AAAgPwAAQD8AACA/AABAPwAAID8AAAA/AADAPgAAAD8AACA/AACAPgAAID8AAAA/AADAPgAAgD4AACA/AAAAPwAAID8AAIA+AADAPgAAgD4AACA/AAAAAAAAID8AAIA+AAAgPwAAgD4AACA/AAAAAAAAwD4AAAAAAAAgPwAAAAAAAMA+AAAAAAAAAD4AAAA/AADAPgAAgD4AAMA+AAAAPwAAAD4AAIA+AAAAPgAAgD4AAAA+AAAAPwAAID8AAAAAAAAAPgAAAD8AACA/AABAPwAAwD4AAAAAAABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AABgPwAAgD4AAMA+AAAAAAAAID8AAAAAAAAgPwAAAAAAAMA+AAAAAAAAAD4AAAA/AAAgPwAAQD8AACA/AABAPwAAAD4AAAA/AAAgPwAAAAAAAMA+AAAAAAAAwD4AAAAAAAAgPwAAAAAAACA/AABAPwAAAD4AAAA/AAAAPgAAAD8AACA/AABAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAgPwAAAD8AAGA/AACAPgAAYD8AAAA/AAAgPwAAgD4AACA/AAAAPwAAYD8AAIA+AAAgPwAAgD4AAGA/AAAAPwAAID8AAAA/AABgPwAAgD4AACA/AACAPgAAYD8AAAA/AAAgPwAAAD8AAGA/AACAPgAAYD8AAAA/AAAgPwAAgD4AAGA/AACAPgAAYD8AAAA/AABgPwAAAD8AAGA/AACAPgAAYD8AAAA/AABgPwAAgD4AAGA/AACAPgAAYD8AAAA/AABgPwAAAD8AAGA/AACAPgAAYD8AAIA+AABgPwAAAD8="),
"format": 34359742487,
"index_count": 396,
"index_data": PackedByteArray("AAABAAIAAAADAAEAAgAEAAAAAgAFAAQAAQAGAAIAAQAHAAYACAAJAAoACAALAAkACQAMAAoACQANAAwADgAPABAADwARABAADwASABEADgATAA8AEwAUAA8AEwAVABQAFgAXABgAFgAZABcAFgAaABkAFgAbABoAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkAKwAsACkAKwAtACwAKwAoAC4AKwAuAC8AMAAxADIAMAAzADEAMwA0ADEAMwA1ADQANgA3ADgANgA5ADcAOAA3ADoAOAA6ADsAOQA8ADcAOQA9ADwAPgA/AEAAPgBBAD8APgBAAEIAPgBCAEMARABFAEYARABHAEUASABEAEYASABGAEkASgBLAEwASgBNAEsATgBPAFAATgBRAE8AUgBTAFQAUgBVAFMAVQBWAFMAVQBXAFYAVQBSAFgAVQBYAFkAWgBbAFwAWgBdAFsAXABbAF4AXABeAF8AXQBgAFsAXQBhAGAAYgBjAGQAYgBlAGMAYgBkAGYAYgBmAGcAaABpAGoAaABrAGkAbABtAG4AbABvAG0AcABxAHIAcABzAHEAcgB0AHAAcgB1AHQAcQB2AHIAcQB3AHYAeAB5AHoAeAB7AHkAeQB8AHoAeQB9AHwAfgB/AIAAfwCBAIAAfwCCAIEAfgCDAH8AgwCEAH8AgwCFAIQAhgCHAIgAhgCJAIcAhgCKAIkAhgCLAIoAjACNAI4AjACPAI0AkACRAJIAkACTAJEAlACVAJYAlACXAJUAmACZAJoAmACbAJkAnACdAJ4AnACfAJ0AoAChAKIAoACjAKEApAClAKYApACnAKUApQCnAKgApwCkAKkAqQCkAKoApwCpAKsArACtAK4ArACvAK0ArQCvALAArwCsALEAsQCsALIArwCxALMAtAC1ALYAtAC3ALUAuAC5ALoAuAC7ALkAvAC9AL4AvAC/AL0AwADBAMIAwADDAMEAxADFAMYAxADHAMUAyADJAMoAyADLAMkAzADNAM4AzADPAM0A"),
"material": SubResource("StandardMaterial3D_53dw8"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 208,
"vertex_data": PackedByteArray("zbrPPkuByD3DBvy+xQb8PiBxHT5eKRS/zbrPPiBxHT7DBvy+xQb8PkuByD1eKRS/srW9PUuByD3Mcje+srW9PSBxHT7Mcje+zbrPPtACZj7DBvy+xQb8PtACZj5eKRS/xQb8PkuByD1eKRS/YSkUPyBxHT7DBvy+xQb8PiBxHT5eKRS/YSkUP0uByD3DBvy+xQb8PtACZj5eKRS/YSkUP9ACZj7DBvy+YSkUP0uByD3DBvy+xQb8PiBxHT7Jus++YSkUPyBxHT7DBvy+YSkUP9ACZj7DBvy+xQb8PtACZj7Jus++xQb8PkuByD3Jus++znI3PiBxHT6qtb29znI3PkuByD2qtb29zbrPPkuByD3DBvy+YSkUP0uByD3DBvy+xQb8PkuByD1eKRS/xQb8PkuByD3Jus++znI3PkuByD2qtb29srW9PUuByD3Mcje+xQb8viBxHT7Jus++zbrPvtACZj7DBvy+zbrPviBxHT7DBvy+xQb8vtACZj7Jus++znI3PiBxHT6qtb29srW9PUuByD3Mcje+srW9PSBxHT7Mcje+znI3PkuByD2qtb29xQb8PiBxHT7Jus++srW9PSBxHT7Mcje+zbrPPiBxHT7DBvy+znI3PiBxHT6qtb29zbrPvkuByD3DBvy+xQb8viBxHT5eKRS/xQb8vkuByD1eKRS/zbrPviBxHT7DBvy+xQb8vtACZj5eKRS/zbrPvtACZj7DBvy+trW9vUuByD3Mcje+trW9vSBxHT7Mcje+xQb8vkuByD1eKRS/YSkUvyBxHT7DBvy+YSkUv0uByD3DBvy+xQb8viBxHT5eKRS/YSkUv9ACZj7DBvy+xQb8vtACZj5eKRS/YSkUv0uByD3DBvy+xQb8viBxHT7Jus++xQb8vkuByD3Jus++YSkUvyBxHT7DBvy+0HI3viBxHT6qtb290HI3vkuByD2qtb29xQb8vtACZj7Jus++YSkUv9ACZj7DBvy+zbrPvkuByD3DBvy+YSkUv0uByD3DBvy+xQb8vkuByD3Jus++xQb8vkuByD1eKRS/0HI3vkuByD2qtb29trW9vUuByD3Mcje+xQb8PiBxHT5iKRQ/YSkUP9ACZj7LBvw+YSkUPyBxHT7LBvw+xQb8PtACZj5iKRQ/xQb8PkuByD1iKRQ/YSkUP0uByD3LBvw+0HI3viBxHT6qtb29trW9vUuByD3Mcje+0HI3vkuByD2qtb29trW9vSBxHT7Mcje+xQb8viBxHT7Jus++trW9vSBxHT7Mcje+0HI3viBxHT6qtb29zbrPviBxHT7DBvy+zbrPPkuByD3LBvw+xQb8PiBxHT5iKRQ/xQb8PkuByD1iKRQ/zbrPPiBxHT7LBvw+xQb8PtACZj5iKRQ/zbrPPtACZj7LBvw+srW9PUuByD3Scjc+srW9PSBxHT7Scjc+YSkUP0uByD3LBvw+xQb8PiBxHT7Ous8+xQb8PkuByD3Ous8+YSkUPyBxHT7LBvw+znI3PiBxHT69tb09znI3PkuByD29tb09xQb8PtACZj7Ous8+YSkUP9ACZj7LBvw+zbrPPkuByD3LBvw+YSkUP0uByD3LBvw+xQb8PkuByD3Ous8+xQb8PkuByD1iKRQ/znI3PkuByD29tb09srW9PUuByD3Scjc+znI3PiBxHT69tb09srW9PUuByD3Scjc+znI3PkuByD29tb09srW9PSBxHT7Scjc+xQb8PiBxHT7Ous8+srW9PSBxHT7Scjc+znI3PiBxHT69tb09zbrPPiBxHT7LBvw+zbrPvkuByD3LBvw+xQb8viBxHT5iKRQ/zbrPviBxHT7LBvw+xQb8vkuByD1iKRQ/trW9vUuByD3Scjc+trW9vSBxHT7Scjc+zbrPvtACZj7LBvw+xQb8vtACZj5iKRQ/xQb8vkuByD1iKRQ/YSkUvyBxHT7LBvw+xQb8viBxHT5iKRQ/YSkUv0uByD3LBvw+xQb8vtACZj5iKRQ/YSkUv9ACZj7LBvw+YSkUv0uByD3LBvw+xQb8viBxHT7Ous8+YSkUvyBxHT7LBvw+YSkUv9ACZj7LBvw+xQb8vtACZj7Ous8+xQb8vkuByD3Ous8+0HI3viBxHT69tb090HI3vkuByD29tb09zbrPvkuByD3LBvw+YSkUv0uByD3LBvw+xQb8vkuByD1iKRQ/xQb8vkuByD3Ous8+0HI3vkuByD29tb09trW9vUuByD3Scjc+0HI3viBxHT69tb09trW9vUuByD3Scjc+trW9vSBxHT7Scjc+0HI3vkuByD29tb09xQb8viBxHT7Ous8+trW9vSBxHT7Scjc+zbrPviBxHT7LBvw+0HI3viBxHT69tb09znI3PkuByD2qtb29znI3PiBxHT69tb09znI3PiBxHT6qtb29znI3PkuByD29tb09srW9PUuByD3Scjc+trW9vSBxHT7Scjc+srW9PSBxHT7Scjc+trW9vUuByD3Scjc+0HI3viBxHT6qtb290HI3vkuByD29tb090HI3vkuByD2qtb290HI3viBxHT69tb09srW9PSBxHT7Mcje+trW9vUuByD3Mcje+srW9PUuByD3Mcje+trW9vSBxHT7Mcje+srW9PSBxHT7Scjc+znI3PiBxHT6qtb29znI3PiBxHT69tb09trW9vSBxHT7Mcje+srW9PSBxHT7Mcje+0HI3viBxHT69tb09trW9vSBxHT7Scjc+0HI3viBxHT6qtb290HI3vkuByD2qtb29srW9PUuByD3Mcje+trW9vUuByD3Mcje+znI3PkuByD29tb09znI3PkuByD2qtb29trW9vUuByD3Scjc+0HI3vkuByD29tb09srW9PUuByD3Scjc+xQb8PtACZj5eKRS/xQb8PtACZj7Jus++zbrPPtACZj7DBvy+YSkUP9ACZj7DBvy+xQb8vtACZj5eKRS/xQb8vtACZj7Jus++YSkUv9ACZj7DBvy+zbrPvtACZj7DBvy+xQb8PtACZj5iKRQ/xQb8PtACZj7Ous8+YSkUP9ACZj7LBvw+zbrPPtACZj7LBvw+xQb8vtACZj5iKRQ/xQb8vtACZj7Ous8+zbrPvtACZj7LBvw+YSkUv9ACZj7LBvw+xQb8PiBxHT7Ous8+zbrPPtACZj7LBvw+zbrPPiBxHT7LBvw+xQb8PtACZj7Ous8+zbrPPiBxHT7DBvy+xQb8PtACZj7Jus++xQb8PiBxHT7Jus++zbrPPtACZj7DBvy+zbrPviBxHT7LBvw+xQb8vtACZj7Ous8+xQb8viBxHT7Ous8+zbrPvtACZj7LBvw+AAD/v/9///8AAP+//3///wAA/7//f///AAD/v/9///8AAP+/////vwAA/7////+/AAD/v////78AAP+/////v////7//f///////v/9///////+//3///////7//f///////v////7////+/////v/+//3//f////7//f/9/////v/9//3////+//3////8//7//f////z//v/9//3////+//3////8//7//f////z//fwAA////3/9/AAD////f/38AAP///9//fwAA////3/9/AAD///+//38AAP///7//v/9/////P/+//3////8//7//f////z//v/9/////P/8//39ijGIM/z//f3iaeBr/P/9/g6CDIP8//3//fwAA/3///////7//f///////v/9///////+//3///////7////+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7////+/////v////7////+/////v////7////+/AAD/v/9/AAAAAP+//38AAAAA/7//fwAAAAD/v/9/AAAAAP+/////vwAA/7////+//z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9/////P/8//3////8//z//f////z//P/9/////P/9/AAAAAP8f/38AAAAA/x//fwAAAAD/H/9/AAAAAP8f/38AAP///7//fwAA////v/+//3//fwAA/7//f////z//v/9//38AAP+//3////8//7//f/9/AAD/v/9//38AAP+//3+cc5zz/7//f4ZlhuX/v/9//3////+//397X3vf/3///////7//f///////v/9///////+//3///////7//P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//3////8//z//f////z//P/9/////P/8//3////8/////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/////v////7////+/////v////7////+/////v/9/AAD/v/8//38AAP+//z//fwAA/7//P/9/AAD/v/8//38AAP///7//fwAA////vwAA/7/EmM35AAD/v/G0wvIAAP+//3///wAA/78Hwb3v/3///////7//f///////v/9///////+//3///////7//v/9//3////+//3//f////7//f/9/////v/9//3////+//3////8//7//f////z//v/9/////P/+//3////8//z//f/9/////P/9//3////8//3//f////z//f/9/////P/9/////P/8//3////8/AAD/v/9///8AAP+//3///wAA/7//f///AAD/v////78AAP+/////vwAA/7//f///AAD/v////78AAP+/////v/9/AAD/P/+//38AAP8//7//fwAA/z//v/9/AAD/P/+//38AAP///7//fwAA////v////786ZzEG////vw1LPA3///+/9z5BEP///7//fwAA/3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////v/9//3////8//3//f////z//f/9/////P/9//3////8/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//////////v/////////+//////////7//////////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+//3///////7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3////8//7//f////z//v/9/////P/+//3////8//7//f////7//P/9/////v/8//3////+//z//f////7//P/9///8AAP8f/3///wAA/x//f///AAD/H/9///8AAP8f/3///////9//f///////3/9////////f/3///////98AAP+/////vwAA/7////+/AAD/v////78AAP+/////v/8//3////8//z//f////z//P/9/////P/8//3////8/////v////7////+/////v////7////+/////v////78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_nxcai")

[sub_resource type="BoxMesh" id="BoxMesh_xhfnw"]
size = Vector3(0.05, 0.025, 0.6)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_sh265")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.162109, 0)
mesh = SubResource("ArrayMesh_xhfnw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.481873, 0.0892705, 0.487957)
mesh = SubResource("BoxMesh_xhfnw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.496939, 0.0892705, 0.487957)
mesh = SubResource("BoxMesh_xhfnw")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.481873, 0.0892705, -0.479561)
mesh = SubResource("BoxMesh_xhfnw")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.496939, 0.0892705, -0.479561)
mesh = SubResource("BoxMesh_xhfnw")
